# monadoc-4

./: .gitignore  .hlint.yaml  README.markdown  buildspec.yml  docker-compose.yaml  main.tf  monadoc.cabal  stack.yaml
.semaphore/: build.sh  deploy.sh  deploy.yaml  deploy.yml  semaphore.yml
aws/: cloud-formation.yaml  code-build.yaml
aws/phases/: build.sh  install.sh  post_build.sh  pre_build.sh
container/: Dockerfile
docker/: .dockerignore  Dockerfile  aws.Dockerfile  aws.docker  ecs.Dockerfile  stack.Dockerfile  stack.docker
source/executable/: Main.hs
source/test-suite/: Main.hs
tools/: stack.sh  terraform.sh
