name: monadoc
version: 0.0.0.0

build-type: Simple
cabal-version: >= 1.10
category: Web
description: Monadoc provides better Haskell documentation.
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak
synopsis: Better Haskell documentation.

library
  autogen-modules: Paths_monadoc
  build-depends:
    base >= 4.12.0 && < 4.13
  default-language: Haskell98
  exposed-modules: Monadoc
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-safe
  hs-source-dirs: source/library
  other-modules: Paths_monadoc

executable monadoc
  build-depends: base, monadoc
  default-language: Haskell98
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs
