name: monadoc
version: 0.0.0.0

build-type: Simple
cabal-version: >= 1.10
category: Web
data-dir: data
data-files: *.css *.ico
description: Monadoc provides better Haskell documentation.
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak
synopsis: Better Haskell documentation.

library
  autogen-modules: Paths_monadoc
  build-depends:
    base >= 4.12.0 && < 4.13
    , bytestring >= 0.10.8 && < 0.11
    , http-types >= 0.12.3 && < 0.13
    , lucid >= 2.9.12 && < 2.10
    , text >= 1.2.3 && < 1.3
    , time >= 1.8.0 && < 1.9
    , wai >= 3.2.2 && < 3.3
    , wai-extra >= 3.0.29 && < 3.1
    , warp >= 3.3.5 && < 3.4
  default-language: Haskell98
  exposed-modules: Monadoc
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: source/library
  other-modules: Paths_monadoc

executable monadoc
  build-depends: base, monadoc
  default-language: Haskell98
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs
