name: monadoc
version: 0.0.0.0

build-type: Simple
cabal-version: >= 1.10
category: Web
data-dir: data
data-files: *.css *.ico
description: Monadoc provides better Haskell documentation.
extra-source-files: README.markdown
license-file: LICENSE.markdown
license: ISC
maintainer: Taylor Fausak
synopsis: Better Haskell documentation.

library
  autogen-modules: Paths_monadoc
  build-depends:
    base >= 4.13.0 && < 4.14
    , aeson >= 1.4.6 && < 1.5
    , bytestring >= 0.10.10 && < 0.11
    , cookie >= 0.4.5 && < 0.5
    , cryptonite >= 0.26 && < 0.27
    , http-client >= 0.6.4 && < 0.7
    , http-client-tls >= 0.3.5 && < 0.4
    , http-types >= 0.12.3 && < 0.13
    , lucid >= 2.9.12 && < 2.10
    , memory >= 0.15.0 && < 0.16
    , network-uri >= 2.6.2 && < 2.7
    , postgresql-simple >= 0.6.2 && < 0.7
    , stm >= 2.5.0 && < 2.6
    , text >= 1.2.4 && < 1.3
    , time >= 1.9.3 && < 1.10
    , uuid >= 1.3.13 && < 1.4
    , wai >= 3.2.2 && < 3.3
    , warp >= 3.3.9 && < 3.4
  default-language: Haskell98
  exposed-modules: Monadoc
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: source/library
  other-modules: Paths_monadoc

executable monadoc
  build-depends: base, monadoc
  default-language: Haskell98
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs
